Since the site hal-india.com uses "Contact Number" to label phone number fields, the regex "contact.?number" was added.

BUG=594090
TEST=FormStructureBrowserTest

Review URL: https://codereview.chromium.org/1808593003

Cr-Commit-Position: refs/heads/master@{#381453}

Former-commit-id: 25b58830ea3a933a25700962f6c72b97720444fb